--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -15,8 +15,9 @@
   <%= @house.address %>
 </p>
 
+<%= render :template => 'flats/index' %>
 
 <%= link_to 'Edit', edit_house_path(@house) %> |
 <%= link_to 'Back', houses_path %>
 
-<%= render  'flats/index' %>
+
