--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -12,27 +12,27 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :stotal %><br />
+    <%= f.label :Общая площадь %><br />
     <%= f.text_field :stotal %>
   </div>
   <div class="field">
-    <%= f.label :slive %><br />
+    <%= f.label :Жилая площадь %><br />
     <%= f.text_field :slive %>
   </div>
   <div class="field">
-    <%= f.label :wc %><br />
+    <%= f.label :Санузел %><br />
     <%= f.text_field :wc %>
   </div>
   <div class="field">
-    <%= f.label :floor %><br />
+    <%= f.label :Этаж %><br />
     <%= f.text_field :floor %>
   </div>
   <div class="field">
-    <%= f.label :comment %><br />
+    <%= f.label :Описание %><br />
     <%= f.text_area :comment %>
   </div>
   <div class="field">
-    <%= f.label :cost %><br />
+    <%= f.label :Цена %><br />
     <%= f.text_field :cost %>
   </div>
   <div class="actions">
