--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -1,14 +1,14 @@
-<h1>Listing houses</h1>
+<h1>Наши объекты</h1>
 
 <table>
-  <tr>
-    <th>Name</th>
+<!--  <tr>
+    <th>Название объекта</th>
     <th>Description</th>
     <th>Address</th>
     <th></th>
     <th></th>
     <th></th>
-  </tr>
+  </tr> -->
 
 <% @houses.each do |house| %>
   <tr>
