--- a/app/views/houses/_form.html.erb
+++ b/app/views/houses/_form.html.erb
@@ -12,15 +12,15 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :Название %><br />
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :description %><br />
+    <%= f.label :Описание %><br />
     <%= f.text_area :description %>
   </div>
   <div class="field">
-    <%= f.label :address %><br />
+    <%= f.label :Адрес %><br />
     <%= f.text_field :address %>
   </div>
   <div class="actions">
