--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -1,23 +1,24 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Name:</b>
+  <b>Название:</b>
   <%= @house.name %>
 </p>
 
 <p>
-  <b>Description:</b>
+  <b>Описание:</b>
   <%= @house.description %>
 </p>
 
 <p>
-  <b>Address:</b>
+  <b>Адрес:</b>
   <%= @house.address %>
 </p>
 
-<%= render :template => 'flats/index' %>
+<%= link_to 'Add flat', new_house_flat_path(@house.id)  %>
+<br />
 
 <%= link_to 'Edit', edit_house_path(@house) %> |
 <%= link_to 'Back', houses_path %>
 
-
+<%= render  :template => 'flats/index' %>
